removing a z-index class on the header that prevent to click on the notification display bar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 5;
+  // z-index: 5;
 }
 
 .navbar_home {
